--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
   <h1>Welcome to Vaishnavi's Recipes</h1>
+  <a href="index.html" target="_blank">Home</a>&nbsp;&nbsp;
+  <a href="about.html" target="_blank">about</a>
+  <img src="./food.jpg" height="750px" width="1500px">
+  
+  
   
 </body>
 </html>
