--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
   <title>Home</title>
 </head>
 <body>
+  <div>
   <h1>Welcome to Vaishnavi's Recipes</h1>
   <a href="index.html" target="_blank">Home</a>&nbsp;&nbsp;
   <a href="about.html" target="_blank">about</a>
   <img src="./food.jpg" height="750px" width="1500px">
+</div>
   
   
   
