--- a/about.html
+++ b/about.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About us</title>
 </head>
+
 <body>
+  <div>
+    <h1>Welcome to Vaishnavi's Recipes</h1>
+    <a href="index.html" target="_blank">Home</a>&nbsp;&nbsp;
+    <a href="about.html" target="_blank">about</a>
+  </div>
+    
   <h1>Its all about our Recepies....!!!</h1>
   
+  <p>Welcome to Indian Recepies, your ultimate destination for authentic and delicious Indian recipes!!!!
+
+    We’re passionate about bringing the rich, diverse flavors of Indian cuisine to your kitchen. From the spicy street
+    foods of Delhi to the comforting home-cooked meals of South India, our goal is to celebrate every regional flavor
+    and traditional recipe that makes Indian food so special.
+
+    Whether you're a beginner learning how to make your first roti, or a seasoned cook looking to explore lesser-known
+    regional dishes, we’ve got something for you. Every recipe is carefully curated, tested, and shared with
+    step-by-step instructions and tips to make cooking a joyful experience....</p>
+    <img src="food1.jpg" height="500px" alt="indian food">
+    <img src="food2.jpg" height="500px">
+
 </body>
+
 </html>
