--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
     <h1>Welcome to Vaishnavi's Recipes</h1>
     <a href="index.html" target="_blank">Home</a>&nbsp;&nbsp;
     <a href="about.html" target="_blank">about</a>
+    <a href="Recipes" target="_blank">Recipes</a>
   </div>
     
   <h1>Its all about our Recepies....!!!</h1>
