--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
   <div>
   <h1>Welcome to Vaishnavi's Recipes</h1>
   <a href="index.html" target="_blank">Home</a>&nbsp;&nbsp;
-  <a href="about.html" target="_blank">about</a>
+  
+  <a href="about.html" target="_blank">about us</a>&nbsp;&nbsp;
+ <a href="recipes.html" target="_blank">Recipes</a><br>
   <img src="./food.jpg" height="750px" width="1500px">
+  
 </div>
   
   
