contact page added

--- a/recipes.html
+++ b/recipes.html
@@ -23,6 +23,7 @@
 </ul>
 <img src="north.jpg" height="500px">
 <img src="./food4.psd" height="500px">
+<img src="./fimg.jpg" height="500px">
   
 </body>
 </html>
