--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
   <h1>Welcome to Vaishnavi's Recipes</h1>
   <a href="index.html" target="_blank">Home</a>&nbsp;&nbsp;
   
-  <a href="about.html" target="_blank">about us</a>&nbsp;&nbsp;
- <a href="recipes.html" target="_blank">Recipes</a><br>
+  <a href="about.html" target="_blank">about us</a>&nbsp;
+ <a href="recipes.html" target="_blank">Recipes</a><br>&nbsp;
+ <a href="contact.html" target="_blank">Contact Us</a>
   <img src="./food.jpg" height="750px" width="1500px">
   
 </div>
