modified the form section with added CheackBox and Radio Button

--- a/contact.html
+++ b/contact.html
@@ -36,14 +36,17 @@
 
     <label for="time">Time:</label>
     <input type="datetime" placeholder="Enter the time" required><br><br/>
+    <label for="fav">Choose Your Are:</label><br>
+    <input type="radio" id="fav" name="choose">Vegiterion<br>
+    <input type="radio" id="fav" name="choose">Non-Vegiterion<br><br>
 
     
-    <label for="dish">Select Your Favourite Dishes :</label><br>
+    <label for="dish">Select Your Favourite Vegiterion Dishes :</label><br>
     <input type="checkbox" name="dish" value="Pizza"> Pizza <br>
     <input type="checkbox" name="dish" value="Burger"> Burger<br>
     <input type="checkbox" name="dish" value="Sandwich"> Sandwich<br>
     <input type="checkbox" name="dish" value="Pasta"> Pasta<br>
-    <input type="checkbox" name="dish" value="Maggie"> Maggie<br>
+    <input type="checkbox" name="dish" value="Maggie"> Maggie<br><br>
     <label for="submit">Submit:</label>
     <input type="button" value="Submit" id="submit"><br>
 
