Modified the recipes page

--- a/recipes.html
+++ b/recipes.html
@@ -24,6 +24,40 @@
 <img src="north.jpg" height="500px">
 <img src="./food4.psd" height="500px">
 <img src="./fimg.jpg" height="500px">
+<h3>Popular Indian Recipes....!!!</h2> 
+<h4>1.Biryani</h4>
+<p>Biryani is a fragrant rice dish made with basmati rice, meat (usually chicken, mutton, or beef), and spices. The spices include saffron, garam masala, cloves, cinnamon, cardamom, and nutmeg.</p>
+<h4>Ingredients:</h4>
+<ul>
+  <li>Chicken or mutton</li>
+  <li>Garam masala</li>
+  <li>Ginger-garlic paste</li>
+  <li>Fried onions</li>
+
+</ul>
+
+<h4>2.Paneer Butter Masala</h4>
+<p>A vegetarian alternative to butter chicken, this dish uses paneer (Indian cottage cheese) cooked in a creamy, tomato-based gravy with butter and spices.</p>
+<h4>Ingredients</h4>
+<ul>
+  <li>Paneer (cubed)</li>
+  <li>Butter</li>
+  <li>Tomatoes</li>
+  <li>Cream</li>
+  <li>Garam masala</li>
+  <li>Kasuri methi (dried fenugreek leaves)</li>
+</ul>
+<h4>3.Pani Puri</h4>
+<p>Small, hollow, crispy puris filled with a spicy, tangy water (pani), along with potato, chickpeas, and tamarind chutney.</p>
+<h4>Ingredients:</h4>
+<ul>
+  <li>Puri shells (semolina flour)</li>
+  <li>Boiled potatoes</li>
+  <li>Chickpeas</li>
+  <li>Tamarind chutney</li>
+  <li>Pani (spicy tamarind water)</li>
+</ul>
+
   
 </body>
 </html>
