--- a/contact.html
+++ b/contact.html
@@ -20,22 +20,22 @@
 
   <form>
     <label for="name">Name:</label>
-    <input type="text" placeholder="Enter Name"  id="name" required><br><br/>
+    <input type="text" placeholder="Enter Name"  id="name" required><br>
 
     <label for="email">Email:</label>
-    <input type="text" id="email" placeholder="Enter email" required><br><br/>
+    <input type="text" id="email" placeholder="Enter email" required><br/>
 
     <label for="phone"> Phone No.:</label>
-    <input type="number" placeholder="Enter Phone no." required><br><br/>
+    <input type="number" placeholder="Enter Phone no." required><br>
 
     <label for="address">Address:</label>
-    <input type="text" placeholder="Enter Address" required><br><br/>
+    <input type="text" placeholder="Enter Address" required><br>
 
     <label for="date">Date:</label>
-    <input type="date" placeholder="Enter Date" required><br><br/>
+    <input type="date" placeholder="Enter Date" required><br>
 
     <label for="time">Time:</label>
-    <input type="datetime" placeholder="Enter the time" required><br><br/>
+    <input type="datetime" placeholder="Enter the time" required><br/>
     <label for="fav">Choose Your Are:</label><br>
     <input type="radio" id="fav" name="choose">Vegiterion<br>
     <input type="radio" id="fav" name="choose">Non-Vegiterion<br><br>
@@ -46,12 +46,19 @@
     <input type="checkbox" name="dish" value="Burger"> Burger<br>
     <input type="checkbox" name="dish" value="Sandwich"> Sandwich<br>
     <input type="checkbox" name="dish" value="Pasta"> Pasta<br>
-    <input type="checkbox" name="dish" value="Maggie"> Maggie<br><br>
-    <label for="submit">Submit:</label>
-    <input type="button" value="Submit" id="submit"><br>
-
+    <input type="checkbox" name="dish" value="Maggie"> Maggie<br>
     
-  </form>
+    <label for="states"> Select Your State:</label>
+    <select id="states">
+    <option value="Maharashtra">Maharashtra</option>
+    <option value="Rajstan">Rajstan</option>
+    <option value="Gujrat">Gujrat</option>
+    <option value="Goa">Goa</option>
+    <option value="Bihar">Bihar</option>
+  </select><br>
+  <label for="submit">Submit:</label>
+    <input type="button" value="Submit" id="submit"><br>
+</form>
   <img src="./north.jpg" height="500px">
 
   
