added paragraph section in about page

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 
 <body>
   <div>
-    <h1>Welcome to Vaishnavi's Recipes</h1>
+    <h1>Welcome to Flavors of India!</h1>
     <a href="index.html" target="_blank">Home</a>&nbsp;&nbsp;
     <a href="about.html" target="_blank">about</a>
     <a href="Recipes" target="_blank">Recipes</a>
@@ -26,6 +26,14 @@
     Whether you're a beginner learning how to make your first roti, or a seasoned cook looking to explore lesser-known
     regional dishes, we’ve got something for you. Every recipe is carefully curated, tested, and shared with
     step-by-step instructions and tips to make cooking a joyful experience....</p>
+    <h2>Why Choose Us...?</h2>
+    <ul>
+      <li>Authentic recipes with detailed instructions</li>
+      <li>Regional specialties from every corner of India</li>
+      <li>Tips and tricks for perfect results</li>
+      <li>Beautiful photography and videos</li>
+
+    </ul>
     <img src="food1.jpg" height="500px" alt="indian food">
     <img src="food2.jpg" height="500px">
 
