--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
   <div>
-  <h1>Welcome to Vaishnavi's Recipes</h1>
+  <h1>Welcome to Flavors of India!</h1>
   <a href="index.html" target="_blank">Home</a>&nbsp;&nbsp;
   
   <a href="about.html" target="_blank">about us</a>&nbsp;
- <a href="recipes.html" target="_blank">Recipes</a><br>&nbsp;
+ <a href="recipes.html" target="_blank">Recipes</a>&nbsp;
  <a href="contact.html" target="_blank">Contact Us</a>
   <img src="./food.jpg" height="750px" width="1500px">
   
