--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div>
-  <h1>Welcome to Vaishnavi's Recipes</h1>
+  <h1>Welcome to Flavors of India!</h1>
   <nav>
   <a href="index.html" target="_blank">Home</a>&nbsp;&nbsp;
   
