--- a/recipes.html
+++ b/recipes.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div>
-    <h1>Welcome to Vaishnavi's Recipes</h1>
+    <h1>Welcome to Flavors of India!</h1>
     <a href="index.html" target="_blank">Home</a>&nbsp;&nbsp;
     <a href="about.html" target="_blank">about</a>&nbsp;&nbsp;
     <a href="recipes.html" target="_blank">Recipes</a>
