In home page Heading section added

--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
 </head>
 <body>
   <div>
+    <h1>“🌶️ Taste the Magic of India’s Culinary Delights”</h1>
   <h1>Welcome to Flavors of India!</h1>
   <a href="index.html" target="_blank">Home</a>&nbsp;&nbsp;
   
   <a href="about.html" target="_blank">about us</a>&nbsp;
  <a href="recipes.html" target="_blank">Recipes</a>&nbsp;
  <a href="contact.html" target="_blank">Contact Us</a>
+ <p>“Explore the rich flavors of India with hundreds of recipes ranging from regional delights to modern takes on traditional dishes. Whether you’re craving spicy curries or sweet desserts, we’ve got you covered.”</p>
   <img src="./food.jpg" height="750px" width="1500px">
   
 </div>
