modified the about page with added the paragraph and heading section

--- a/about.html
+++ b/about.html
@@ -34,8 +34,15 @@
       <li>Beautiful photography and videos</li>
 
     </ul>
+    <h2>Mission statement</h2>
+    <p><i>Our mission is to share the rich culinary heritage of India with the world, making it easy for anyone to cook, learn, and enjoy the diverse flavors from every region."
+
+    "</i></p>
+
     <img src="food1.jpg" height="500px" alt="indian food">
     <img src="food2.jpg" height="500px">
+    <h2>What Makes Us Different:</h2>
+    <p>"Unlike many other recipe websites, we focus on authentic, traditional cooking techniques. Our goal is to make each recipe as close to the original as possible, preserving the essence of Indian cooking."</p>
 
 </body>
 
